--- a/app/components/Editor/styles.css
+++ b/app/components/Editor/styles.css
@@ -45,6 +45,9 @@ header h1 {
 }
 
 .editor-shell {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 20px auto;
   border-radius: 2px;
   max-width: 1100px;
@@ -1469,7 +1472,10 @@ button.action-button:disabled {
   position: sticky;
   top: 0;
   z-index: 2;
-  overflow-y: hidden; /* disable vertical scroll*/
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 button.toolbar-item {
@@ -1483,6 +1489,7 @@ button.toolbar-item {
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
+  margin: 0 2px;
 }
 
 button.toolbar-item:disabled {
