Create a separate required 1st line for the Title and patch the note when it's changed

--- a/components/Editor/styles/partials/placeholder.css
+++ b/components/Editor/styles/partials/placeholder.css
@@ -47,3 +47,11 @@
     content: 'Enter details';
   }
 }
+
+.ProseMirror h1.is-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
