--- a/components/Editor/styles/index.css
+++ b/components/Editor/styles/index.css
@@ -27,6 +27,11 @@
   }
 }
 
+/* Override padding specifically for comment editor */
+.comment-editor-content .ProseMirror {
+  @apply px-4 py-3;
+}
+
 [data-theme='slash-command'] {
   width: 1000vw;
 }
