--- a/components/Editor/styles/index.css
+++ b/components/Editor/styles/index.css
@@ -44,3 +44,4 @@
 @import './partials/placeholder.css';
 @import './partials/table.css';
 @import './partials/typography.css';
+@import './partials/readonly.css';
