reverting some files

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,7 +96,7 @@ body {
 
 /* Search result highlighting */
 mark {
-  background-color: #fef9c3;
+  background-color: #FEF9C3;
   color: inherit;
   padding: 0.125rem 0;
   border-radius: 0.125rem;
